[package]
name = "cw"
version = "0.9.0"
authors = ["Thomas Hurst <tom@hur.st>"]
license = "MIT"
description = "Count Words, a fast wc clone"
readme = "README.md"
repository = "https://github.com/Freaky/cw"
keywords = ["wc", "word", "count"]
categories = [ "command-line-utilities", "text-processing" ]
edition = "2018"

[dependencies]
bytecount = "=0.6.3"
structopt = "=0.3.26"
libc = "=0.2.137"
memchr = "=2.4.1"
crossbeam-channel = "=0.5.6"
crossbeam-utils = "=0.8.12"
bstr = "=1.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winbase"] }

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]